# Animation

./: .gitattributes  .gitignore  README.md  README_EN.md  build.gradle  config.gradle  gradle.properties  gradlew  jack.keystore
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 2_1901206392136531995.tgs  2_1901206392136531997.tgs  2_1901206392136532002.tgs  2_1901206392136532003.tgs  2_1901206392136532005.tgs  2_1901206392136532006.tgs  2_1901206392136532008.tgs  2_1901206392136532009.tgs  2_1901206392136532011.tgs  2_1901206392136532012.tgs  2_1901206392136532015.tgs  2_1901206392136532019.tgs  2_773947703670342031.tgs  2_773947703670342033.tgs  2_773947703670342034.tgs  2_773947703670342035.tgs  2_773947703670342037.tgs  2_773947703670342038.tgs  2_773947703670342040.tgs  2_773947703670342041.tgs  2_773947703670342042.tgs  2_773947703670342045.tgs  2_773947703670342046.tgs  2_773947703670342050.tgs  2_773947703670342051.tgs  2_773947703670342052.tgs  2_773947703670342053.tgs  2_773947703670342054.tgs  2_773947703670342055.tgs  2_773947703670342057.tgs  2_773947703670342058.tgs  2_773947703670342060.tgs  2_773947703670342061.tgs  2_773947703670342062.tgs  2_773947703670342063.tgs  2_773947703670342064.tgs  2_773947703670342066.tgs  LottieConfig.json  ic_tab_chat.json  ic_tab_community.json  (+35 more)
app/src/main/assets/anim/emotion/: emotion_loading.json  emotion_loading_gif.json
app/src/main/assets/anim/pk_loading_avatar/: data.json
app/src/main/assets/anim/spring_boom/: data.json
app/src/main/assets/anim/spring_fish/: data.json
app/src/main/assets/anim/spring_light/: data.json
app/src/main/assets/svga/: avatar_animation_26.svga  commute_contrast.svga  ic_live_loading.svga  icon_live_c2_8.svga  icon_tab_live_12.svga  live_list_status_loading.svga  live_list_status_loading_red.svga  main_home_loading_light.svga  moduleloading.svga  play_activities_living.svga  svga_commute_contrast.svga  svga_tabbar_findhouseorder_32_selected.svga  tab_find_house_list_select.svga  tab_find_house_select.svga  tab_home_select.svga  tab_life_select.svga  tab_lvju_select.svga  tab_my_select.svga  tab_search_select.svga  thumbsup_animation.svga  video_newguide.svga  vr_yellow.svga  zra_living.svga
app/src/main/cpp/: CMakeLists.txt  FrameSequence_gif.h
app/src/main/cpp/gif/: BitmapDecoderJNI.cpp  CMakeLists.txt
app/src/main/cpp/giflib/: README.version
app/src/main/cpp/sticker/: CMakeLists.txt  jni.c  lottie.cpp
app/src/main/cpp/sticker/rlottie/src/lottie/: lottieparser.cpp
app/src/main/cpp/sticker/rlottie/src/vector/: vraster.cpp
app/src/main/java/android/support/rastermill/: FrameSequence.java
app/src/main/java/com/github/kongpf8848/animation/: Extensions.kt  (+13 more)
app/src/main/java/org/telegram/messenger/: AndroidUtilities.java  DispatchQueue.java  DispatchQueuePool.java  LocaleController.java
app/src/main/res/anim/: anim_gift_car_1.xml  anim_gift_car_2.xml  anim_gift_car_3.xml  anim_jiayuan_scale_big.xml  anim_rotate.xml  cycle_7.xml  fade_in.xml  fade_out.xml  hongbao_shake.xml  hyperspace_in.xml  hyperspace_out.xml  live_plane.xml  my_scale_action.xml  scale_rotate.xml  scale_translate.xml  shake.xml  shake_down.xml  shake_up.xml  slide_down_out.xml  slide_up_in.xml  splash_start.xml
app/src/main/res/animator/: alpha.xml  live_car.xml
app/src/main/res/color/: onboarding_secondary_background.xml  selector_ziroom_tab_text_color.xml
app/src/main/res/drawable/: anim_bolo.xml  anim_cross.xml  anim_jiayuan.xml  anim_juzi.xml  anim_loading.xml  anim_mouxiu.xml  anim_qidong.xml  anim_vision.xml  apkbind_check_box_selector.xml  bg_giftlayout.xml  btn_home_shortcut_award_bg_selector.xml  btn_home_shortcut_dynamic_bg_selector.xml  btn_home_shortcut_picture_bg_selector.xml  fpt_dialog_bg.xml  fpt_dialog_bottom_bg.xml  guide_dark_dot.xml  guide_white_dot.xml  ic_arrow_right.xml  ic_back_wave_1.xml  ic_back_wave_2.xml  ic_back_wave_3.xml  ic_back_wave_4.xml  ic_logo_infomaniak_mail.xml  indicator_full_tab.xml  live_kiss.xml  loading.xml  logo_for_splash.xml  progressbar_ring.xml  rectangular_solid_e4e3ff_redius_5.xml  selector_close_btn_circle.xml  selector_ziroom_tab_lvju_icon.xml  selector_ziroom_tab_my_icon.xml  selector_ziroom_tab_rent_icon.xml  selector_ziroom_tab_service_icon.xml  selector_ziroom_tab_yu_icon.xml  shape_btn_attention.xml  shape_circle_f7334b.xml  shape_red_circle.xml  shape_solid_white_ovl_10dp.xml  spinner_blue.xml  (+7 more)
app/src/main/res/layout/: activity_anim_frame.xml  activity_anim_property.xml  activity_anim_tween.xml  activity_ball.xml  activity_bill.xml  activity_comment.xml  activity_cupid_shoot.xml  activity_frame_1.xml  activity_frame_2.xml  activity_frame_3.xml  activity_frame_4.xml  activity_frame_5.xml  activity_frame_6.xml  activity_frame_7.xml  activity_frame_8.xml  activity_frame_9.xml  activity_gif.xml  activity_gif_demo.xml  activity_gif_frame.xml  activity_gif_glide.xml  activity_guide.xml  activity_heart.xml  activity_huo_chat.xml  activity_logo.xml  activity_lottie.xml  activity_lottie_autohome.xml  activity_lottie_boss.xml  activity_lottie_card.xml  activity_lottie_kmail.xml  activity_lottie_pdj_guide.xml  activity_lottie_spark.xml  activity_lottie_tab.xml  activity_lottie_xhs.xml  activity_main.xml  activity_other.xml  activity_property_demo.xml  activity_property_login.xml  activity_qimangxing.xml  activity_rotate_8.xml  activity_rotate_loading.xml  (+56 more)
app/src/main/res/raw/: illu_onboarding_1.json  illu_onboarding_2.json  illu_onboarding_3.json  illu_onboarding_4.json  login_flow_circle_animation.json  login_flow_logo_animation.json  login_flow_onboarding_animation.json
app/src/main/res/transition/: transition_1.xml  transition_2.xml  transition_3.xml  transition_4.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/xml/: activity_lottie_spark_scene.xml  motion_scene_fragment_launch_login_form.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Dependencies.kt
gradle/wrapper/: gradle-wrapper.properties
(+252 files in other folders)
